unpackaged/main/default/objects/Contact/fields/Account_Business_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Business_Email__c</fullName>
    <formula>Account.Business_Email_Address__c</formula>
    <label>Account Business Email</label>
    <type>Text</type>
</CustomField>