unpackaged/main/default/objects/Contact/fields/Account_Home_Store__c.field-meta.xml
<CustomField>
    <fullName>Account_Home_Store__c</fullName>
    <description>The name of the home store. This field is used for email templates.</description>
    <formula>IF(
NOT(ISBLANK( Account.Assigned_Store__c )), 
Account.Assigned_Store__r.Name, 
Account.Home_Store__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Home Store</label>
    <type>Text</type>
</CustomField>