unpackaged/main/default/objects/Contact/fields/Account_Home_Store_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Home_Store_Phone_Number__c</fullName>
    <description>This field is used in email templates</description>
    <formula>IF(
NOT(ISBLANK( Account.Assigned_Store__c )), 
Account.Assigned_Store__r.Phone_Number__c, 
Account.Home_Store__r.Phone_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Home Store Phone Number</label>
    <type>Text</type>
</CustomField>