unpackaged/main/default/objects/Contact/fields/AR_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>AR_Contact_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The external id of the contact.</description>
    <externalId>true</externalId>
    <label>AR Contact ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>