unpackaged/main/default/objects/Contact/fields/External_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Contact_Id__c</fullName>
    <description>Value format:  Account Number||&#39;-&#39;||Country Code||&#39;-&#39;||Contact/Source||&#39;-&#39;||Contact/Source ID</description>
    <externalId>true</externalId>
    <label>External Contact Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>