unpackaged/main/default/objects/Contact/fields/First_Day__c.field-meta.xml
<CustomField>
    <fullName>First_Day__c</fullName>
    <description>First day of planned calls</description>
    <label>First Day</label>
    <type>Date</type>
</CustomField>