unpackaged/main/default/objects/Contact/fields/Interests__c.field-meta.xml
<CustomField>
    <fullName>Interests__c</fullName>
    <description>The Interests of the Customer</description>
    <label>Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AFL</fullName>
            </value>
            <value>
                <fullName>Fishing</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Horse Racing</fullName>
            </value>
            <value>
                <fullName>Lawn Bowls</fullName>
            </value>
            <value>
                <fullName>Motor Racing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rugby League</fullName>
            </value>
            <value>
                <fullName>Rugby Union</fullName>
            </value>
            <value>
                <fullName>Soccer</fullName>
            </value>
            <value>
                <fullName>Tennis</fullName>
            </value>
            <value>
                <fullName>Theatre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>