unpackaged/main/default/objects/Contact/fields/Interests_Other__c.field-meta.xml
<CustomField>
    <fullName>Interests_Other__c</fullName>
    <description>Additional Interest aside from the Original Interest of social events they are interested in.</description>
    <label>Interests (Other)</label>
    <length>128</length>
    <type>Text</type>
</CustomField>