unpackaged/main/default/objects/Contact/fields/Marketing_Segment__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Segment__c</fullName>
    <description>The Marketing Segment that the Contact falls under</description>
    <label>Marketing Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>