unpackaged/main/default/objects/Contact/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <description>Related Partners</description>
    <label>Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>