unpackaged/main/default/objects/Contact/fields/Powerpass_Signup_Link__c.field-meta.xml
<CustomField>
    <fullName>Powerpass_Signup_Link__c</fullName>
    <formula>IF(ISPICKVAL(Account.Country__c, &quot;Australia&quot;),

HYPERLINK( $CustomMetadata.Initialisation__mdt.CCRM_Initialisation.AU_Power_Pass_Signup_URL__c&amp;Account.Id,  
&quot;PowerPass account application&quot;),

IF(ISPICKVAL(Account.Country__c, &quot;New Zealand&quot;),

HYPERLINK($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.NZ_Power_Pass_Signup_URL__c&amp;Account.Id,
&quot;Powerpass account application&quot;),


HYPERLINK($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.AU_Power_Pass_Signup_URL__c,
&quot;Powerpass account application&quot;)

)
)</formula>
    <label>Powerpass Signup Link</label>
    <type>Text</type>
</CustomField>