unpackaged/main/default/objects/Contact/fields/Receive_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Receive_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CCRM15-83</description>
    <label>Receive Marketing</label>
    <type>Checkbox</type>
</CustomField>