unpackaged/main/default/objects/Contact/fields/Receive_marketing_communications__c.field-meta.xml
<CustomField>
    <fullName>Receive_marketing_communications__c</fullName>
    <description>Manually inputted</description>
    <label>Receive marketing communications</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>