unpackaged/main/default/objects/Contact/fields/Receive_Marketing_Last_Update_By__c.field-meta.xml
<CustomField>
    <fullName>Receive_Marketing_Last_Update_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receive Marketing Last Update By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>