unpackaged/main/default/objects/Contact/fields/Recurrence__c.field-meta.xml
<CustomField>
    <fullName>Recurrence__c</fullName>
    <description>Until date of planned calls</description>
    <label>Recurrence</label>
    <type>Date</type>
</CustomField>