unpackaged/main/default/objects/Contact/fields/Search_Details__c.field-meta.xml
<CustomField>
    <fullName>Search_Details__c</fullName>
    <formula>Account_Name__c &amp; if(ISBLANK(Account_Name__c) || ISBLANK(TEXT(Status__c)),&quot;&quot; ,&quot; | &quot;) &amp; TEXT(Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Search Details</label>
    <type>Text</type>
</CustomField>