unpackaged/main/default/objects/Contact/fields/Tactic__c.field-meta.xml
<CustomField>
    <fullName>Tactic__c</fullName>
    <description>Tactic used by the account manager</description>
    <label>Tactic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>