unpackaged/main/default/objects/Contact/fields/Target_Call_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Target_Call_Frequency__c</fullName>
    <description>Call frequency</description>
    <label>Target Call Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>3 x Week</fullName>
            </value>
            <value>
                <fullName>Twice Weekly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Every 4 weeks</fullName>
            </value>
            <value>
                <fullName>Every 8 weeks</fullName>
            </value>
            <value>
                <fullName>Every 3 weeks</fullName>
            </value>
            <value>
                <fullName>Every quarter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>