unpackaged/main/default/objects/Contact/fields/Temporary_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Email_Address__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>A temporary email address if AR Contact email field isn&#39;t populated.</description>
    <label>Temporary Email Address</label>
    <type>Email</type>
</CustomField>