unpackaged/main/default/objects/Contact/fields/Verified_AC_Email__c.field-meta.xml
<CustomField>
    <fullName>Verified_AC_Email__c</fullName>
    <description>CCRM15-83</description>
    <formula>Account.Verified_Email__c</formula>
    <label>Verified Email</label>
    <type>Checkbox</type>
</CustomField>