unpackaged/main/default/objects/Contact/recordTypes/AU_AR_Contact.recordType-meta.xml
<RecordType>
    <fullName>AU_AR_Contact</fullName>
    <active>true</active>
    <description>The Australian AR Contact</description>
    <label>AU AR Contact</label>
</RecordType>