unpackaged/main/default/objects/Contact/recordTypes/AU_CRM_Contact.recordType-meta.xml
<RecordType>
    <fullName>AU_CRM_Contact</fullName>
    <active>true</active>
    <description>The Australian CRM Contact</description>
    <label>AU CRM Contact</label>
</RecordType>