unpackaged/main/default/objects/Contact/recordTypes/NZ_AR_Contact.recordType-meta.xml
<RecordType>
    <fullName>NZ_AR_Contact</fullName>
    <active>true</active>
    <description>The New Zealand AR Contact</description>
    <label>NZ AR Contact</label>
</RecordType>