unpackaged/main/default/objects/Contact/recordTypes/NZ_CRM_Contact.recordType-meta.xml
<RecordType>
    <fullName>NZ_CRM_Contact</fullName>
    <active>true</active>
    <description>The New Zealand CRM Contact</description>
    <label>NZ CRM Contact</label>
</RecordType>