unpackaged/main/default/objects/Contact/validationRules/Account_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_is_mandatory</fullName>
    <active>true</active>
    <description>account is mandatory</description>
    <errorConditionFormula>AND(
ISBLANK(AccountId),
NOT(CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Admin_Validation_Exceptions__c, $Profile.Name))
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>A contact must have an Account</errorMessage>
</ValidationRule>