unpackaged/main/default/objects/Contact/validationRules/Contact_details_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_details_mandatory</fullName>
    <active>true</active>
    <description>Ensures either Phone, Mobile or Email is populated before a user can save.</description>
    <errorConditionFormula>AND(
ISBLANK(Email),
ISBLANK(Phone),
ISBLANK(MobilePhone),
NOT(CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Admin_Validation_Exceptions__c, $Profile.Name))
)</errorConditionFormula>
    <errorMessage>Please capture one of the following fields: Phone, Mobile, or Email.</errorMessage>
</ValidationRule>