unpackaged/main/default/objects/Contact/validationRules/Dont_Modify_AR_Contact_LastName.validationRule-meta.xml
<ValidationRule>
    <fullName>Dont_Modify_AR_Contact_LastName</fullName>
    <active>true</active>
    <description>Validation rule to stop anyone except the Admin Exempt users from updating an AR contacts Name</description>
    <errorConditionFormula>AND(
ISCHANGED(LastName),
NOT($RecordType.Name = &quot;AU CRM Contact&quot;),
NOT($RecordType.Name = &quot;NZ CRM Contact&quot;),
NOT(CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Admin_Validation_Exceptions__c, $Profile.Name))
)</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>You cannot update an AR Contact&#39;s Name. Please contact the Credit team.</errorMessage>
</ValidationRule>