unpackaged/main/default/objects/Contact/validationRules/First_name_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>First_name_mandatory</fullName>
    <active>true</active>
    <description>This makes First Name is mandatory</description>
    <errorConditionFormula>AND(
ISBLANK( FirstName ),
NOT($RecordType.Name = &quot;AU AR Contact&quot;),
NOT($RecordType.Name = &quot;NZ AR Contact&quot;),
NOT(CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Admin_Validation_Exceptions__c, $Profile.Name))
)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>A contact must have a First Name</errorMessage>
</ValidationRule>