unpackaged/main/default/objects/Contact/validationRules/NZ_Mobile_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>NZ_Mobile_Length</fullName>
    <active>true</active>
    <description>CCRM-549 For NZ lead record types, the Mobile field can be entered with a minimum of 10 digits and a maximum of 11 digits and must start with 02</description>
    <errorConditionFormula>AND(
CONTAINS( $Label.Record_Types_NZ_CRM_Contact , RecordType.DeveloperName),
!ISBLANK( MobilePhone ),
OR(
NOT(REGEX( MobilePhone , &quot;\\d{9,11}?&quot;)),
Left(MobilePhone, 2) &lt;&gt; &quot;02&quot;
  )
)</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>The Mobile field can be entered with a minimum of 9 digits and a maximum of 11 digits and must start with 02</errorMessage>
</ValidationRule>