unpackaged/main/default/objects/Contact/validationRules/NZ_Supplier_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>NZ_Supplier_Restriction</fullName>
    <active>true</active>
    <description>Restricting Non Quote Profile users from creating Contact for NZ Supplier Account</description>
    <errorConditionFormula>AND(  Account.Record_Type_Name__c = &#39;NZ_Supplier&#39;,  
      $Profile.Name &lt;&gt;  &#39;NZ Quote Office&#39;,
      NOT(CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Admin_Validation_Exceptions__c, 
      $Profile.Name)))</errorConditionFormula>
    <errorMessage>Contact Quote Office to request new contact relating to supplier account</errorMessage>
</ValidationRule>