unpackaged/main/default/objects/Contact/validationRules/Recurrence_greater_or_equal_First_Day.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurrence_greater_or_equal_First_Day</fullName>
    <active>true</active>
    <description>Recurrence must be greater than or equal to First Day.</description>
    <errorConditionFormula>First_Day__c &gt; Recurrence__c</errorConditionFormula>
    <errorMessage>Recurrence must be greater than or equal to First Day.</errorMessage>
</ValidationRule>